# Programming-Skills-Level0

./: .breakpoints  .gitignore  01.online_banking.py  02.currency_converter.py  04.online_shipping.py  0_bankingsystem.py  Banco.py  BankingSystem.cpp  Cargo.toml  Conversor_divisas.py  CurrencyConverter.cpp  Diagrama sin título.drawio  Ejercicio1.py  Ejercicio2.py  Ejercicio5.java  Envios.py  Exercise1.py  Exercise2.py  Exercise3.py  Exercise4.py  Exercise5.py  FinanceManagementApplication.cpp  HELP.md  Programming-Skills-Level0.sln  README.md  Universidad.py  bank.py  banking.py  banking_system.c  banking_system.py  challenge_1.py  challenge_2.py  converter.py  currency.py  currency_converter.c  currency_converter.py  currency_converter_discord.py  database.py  divisas.py  ejercicio1.java  (+43 more)
001banking/: main.html  script.js  styles.css
002currencyConverter/: main.html  script.js
003university/: index.html  script.js  styles.css
BankingOnline/: Program.cs  User.cs
Challenge_1_2/: README.md  settings.gradle
CurrencyConverted/: Program.cs
Currency_Converter/: Currency_Converter.sln  Program.cs
Ejercicio1/: ejercicio1.js  index.html  index.js  style.css  tailwind.config.js
Ejercicio2/: ejercicio2.js  package-lock.json  package.json
Ejercicio3/: ejercicio3.js
Ejercicio4/: ejercicio4.js
Ejercicio5/: ejercicio5.py
Ejercicio_1/: pom.xml
Ejercicios/: Ejercicio1.PY  Ejercicio2.py  Ejercicio3.py  Ejercicio4.py  Ejercicio5.py
Ejercicios_lvl0/: Bankaccount.py  CurrencyConverter.py  FinanceManagement.py  ShippingSystem.py  UniversityEnrollment.py
(+330 files in other folders)
